tests/bad/12_bad_and_type_26.ris
void main():
    print true and 42;
    return;