tests/bad/12_bad_and_type_26.err
Type error in line 2, column 11:
wrong type of expression: 42
expected type: bool
